--- a/i3-config/config
+++ b/i3-config/config
@@ -133,8 +133,8 @@ bindsym $mod+a focus parent
 # move the currently focused window to the scratchpad
 bindsym $mod+Shift+minus move scratchpad
 
-exec terminator -c termscratchpad
-for_window [instance="termscratchpad"] move to scratchpad
+exec terminator -T termscratchpad
+for_window [title="termscratchpad"] move to scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
