--- a/i3-config/i3status.conf
+++ b/i3-config/i3status.conf
@@ -48,7 +48,7 @@ ethernet _first_ {
 battery all {
         # format = "%status %percentage %remaining %emptytime"
         format = " %status %percentage"
-        format_down = "No battery"
+        format_down = "💻"
         last_full_capacity = true
         integer_battery_capacity = true
         # status_chr = ""
