--- a/terminator-config/config
+++ b/terminator-config/config
@@ -1,7 +1,16 @@
 [global_config]
   title_hide_sizetext = True
-  title_transmit_bg_color = "#8c3fbf"
+  title_inactive_bg_color = "#4C566A"
+  title_inactive_fg_color = "#D8DEE9"
+  title_receive_bg_color = "#8FBCBB"
+  title_receive_fg_color = "#2E3440"
+  title_transmit_bg_color = "#88C0D0"
+  title_transmit_fg_color = "#2E3440"
 [keybindings]
+  go_down = <Alt>j
+  go_left = <Alt>h
+  go_right = <Alt>l
+  go_up = <Alt>k
   scaled_zoom = <Alt>Return
   toggle_zoom = <Primary><Shift>z
 [layouts]
@@ -16,6 +25,15 @@
 [plugins]
 [profiles]
   [[default]]
+    background_color = "#2e3440"
+    cursor_color = "#D8DEE9"
+    font = Monospace 11
+    foreground_color = "#d8dee9"
+    palette = "#3b4252:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#88c0d0:#e5e9f0:#4c566a:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#8fbcbb:#eceff4"
+    scrollback_infinite = True
+    scrollbar_position = hidden
+    use_system_font = False
+  [[manjaro]]
     background_darkness = 0.9
     cursor_color = "#aaaaaa"
     font = Monospace 11
