--- a/i3-config/config
+++ b/i3-config/config
@@ -28,6 +28,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return exec i3-sensible-terminal -p light
 
 # kill focused window
 bindsym $mod+Shift+q kill
