--- a/terminator-config/config
+++ b/terminator-config/config
@@ -34,6 +34,17 @@
     scrollback_infinite = True
     scrollbar_position = hidden
     use_system_font = False
+  [[light]]
+    background_color = "#fdf6e3"
+    cursor_color = "#aaaaaa"
+    custom_command = BACKGROUND=light /usr/bin/bash
+    font = Monospace 12
+    foreground_color = "#657b83"
+    scrollback_infinite = True
+    scrollbar_position = hidden
+    show_titlebar = False
+    use_custom_command = True
+    use_system_font = False
   [[manjaro]]
     background_darkness = 0.9
     cursor_color = "#aaaaaa"
@@ -43,12 +54,3 @@
     scrollbar_position = hidden
     use_system_font = False
     use_theme_colors = True
-  [[light]]
-    background_color = "#fdf6e3"
-    cursor_color = "#aaaaaa"
-    font = Monospace 12
-    foreground_color = "#657b83"
-    scrollback_infinite = True
-    scrollbar_position = hidden
-    show_titlebar = False
-    use_system_font = False
