--- a/i3-config/i3status.conf
+++ b/i3-config/i3status.conf
@@ -47,7 +47,7 @@ ethernet _first_ {
 
 battery all {
         # format = "%status %percentage %remaining %emptytime"
-        format = " %status %percentage"
+        format = " %status %percentage (%consumption)"
         format_down = "💻"
         last_full_capacity = true
         integer_battery_capacity = true
@@ -61,7 +61,7 @@ battery all {
         # status_full = ""
         status_full = "☻"
         low_threshold = 15
-        threshold_type = time
+        threshold_type = percentage
 }
 
 tztime local {
