Updates windows terminal settings to use new style

--- a/wsl/terminal/settings.json
+++ b/wsl/terminal/settings.json
@@ -1,7 +1,16 @@
 {
+    "$help": "https://aka.ms/terminal-documentation",
     "$schema": "https://aka.ms/terminal-profiles-schema",
     "actions": 
     [
+        {
+            "command": 
+            {
+                "action": "copy",
+                "singleLine": false
+            },
+            "keys": "ctrl+shift+c"
+        },
         {
             "command": "unbound",
             "keys": "ctrl+shift+w"
@@ -17,31 +26,26 @@
         {
             "command": 
             {
-                "action": "copy",
-                "singleLine": false
+                "action": "moveFocus",
+                "direction": "down"
             },
-            "keys": "ctrl+shift+c"
+            "keys": "alt+j"
+        },
+        {
+            "command": 
+            {
+                "action": "prevTab"
+            },
+            "keys": "ctrl+pgup"
         },
         {
             "command": 
             {
                 "action": "splitPane",
-                "split": "horizontal",
+                "split": "down",
                 "splitMode": "duplicate"
             },
             "keys": "ctrl+shift+o"
-        },
-        {
-            "command": "find",
-            "keys": "ctrl+shift+f"
-        },
-        {
-            "command": 
-            {
-                "action": "moveFocus",
-                "direction": "right"
-            },
-            "keys": "alt+l"
         },
         {
             "command": 
@@ -55,6 +59,18 @@
             "command": 
             {
                 "action": "moveFocus",
+                "direction": "right"
+            },
+            "keys": "alt+l"
+        },
+        {
+            "command": "find",
+            "keys": "ctrl+shift+f"
+        },
+        {
+            "command": 
+            {
+                "action": "moveFocus",
                 "direction": "up"
             },
             "keys": "alt+k"
@@ -62,21 +78,6 @@
         {
             "command": "paste",
             "keys": "ctrl+shift+v"
-        },
-        {
-            "command": 
-            {
-                "action": "prevTab"
-            },
-            "keys": "ctrl+pgup"
-        },
-        {
-            "command": 
-            {
-                "action": "moveFocus",
-                "direction": "down"
-            },
-            "keys": "alt+j"
         },
         {
             "command": "togglePaneZoom",
@@ -112,13 +113,11 @@
                 "source": "Windows.Terminal.Wsl"
             },
             {
-                "commandline": "powershell.exe",
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
                 "hidden": false,
                 "name": "Windows PowerShell"
             },
             {
-                "commandline": "cmd.exe",
                 "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
                 "hidden": false,
                 "name": "Command Prompt"
