--- a/terminator-config/config
+++ b/terminator-config/config
@@ -1,19 +1,47 @@
 [global_config]
   dbus = False
-  title_hide_sizetext = True
-  title_inactive_bg_color = "#4C566A"
-  title_inactive_fg_color = "#D8DEE9"
-  title_receive_bg_color = "#8FBCBB"
-  title_receive_fg_color = "#2E3440"
-  title_transmit_bg_color = "#88C0D0"
-  title_transmit_fg_color = "#2E3440"
 [keybindings]
+  go_up = <Alt>k
   go_down = <Alt>j
   go_left = <Alt>h
   go_right = <Alt>l
-  go_up = <Alt>k
-  scaled_zoom = <Alt>Return
   toggle_zoom = <Primary><Shift>z
+  scaled_zoom = <Alt>Return
+  layout_launcher = <Shift><Alt>l
+[profiles]
+  [[default]]
+    background_color = "#3d3846"
+    background_darkness = 0.85
+    background_type = transparent
+    font = Monospace 11
+    foreground_color = "#ffffff"
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#3b4252:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#88c0d0:#e5e9f0:#4c566a:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#8fbcbb:#eceff4"
+    use_system_font = False
+    title_hide_sizetext = True
+    title_transmit_bg_color = "#26a269"
+  [[light]]
+    background_color = "#ffffff"
+    font = Monospace 12
+    foreground_color = "#000000"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    use_custom_command = True
+    custom_command = BACKGROUND=light /usr/bin/bash
+    use_system_font = False
+    title_hide_sizetext = True
+  [[manjaro]]
+    background_color = "#3d3846"
+    background_darkness = 0.9
+    font = Monospace 11
+    foreground_color = "#f6f5f4"
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#2e3436:#cc0000:#8ae234:#c4a000:#729fcf:#ad7fa8:#34e2e2:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
+    use_system_font = False
+    use_theme_colors = True
 [layouts]
   [[default]]
     [[[child1]]]
@@ -24,33 +52,3 @@
       parent = ""
       type = Window
 [plugins]
-[profiles]
-  [[default]]
-    background_color = "#2e3440"
-    cursor_color = "#D8DEE9"
-    font = Monospace 11
-    foreground_color = "#d8dee9"
-    palette = "#3b4252:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#88c0d0:#e5e9f0:#4c566a:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#8fbcbb:#eceff4"
-    scrollback_infinite = True
-    scrollbar_position = hidden
-    use_system_font = False
-  [[light]]
-    background_color = "#fdf6e3"
-    cursor_color = "#aaaaaa"
-    custom_command = BACKGROUND=light /usr/bin/bash
-    font = Monospace 12
-    foreground_color = "#657b83"
-    scrollback_infinite = True
-    scrollbar_position = hidden
-    show_titlebar = False
-    use_custom_command = True
-    use_system_font = False
-  [[manjaro]]
-    background_darkness = 0.9
-    cursor_color = "#aaaaaa"
-    font = Monospace 11
-    palette = "#2e3436:#cc0000:#8ae234:#c4a000:#729fcf:#ad7fa8:#34e2e2:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
-    scrollback_infinite = True
-    scrollbar_position = hidden
-    use_system_font = False
-    use_theme_colors = True
