Adds i3 nord colour theme

--- a/i3-config/config
+++ b/i3-config/config
@@ -359,31 +359,53 @@ bar {
 	strip_workspace_numbers yes
 
     colors {
-        background #222D31
-        statusline #F9FAF9
-        separator  #454947
+	# Theme Colors Majaro
+        # background #222D31
+        # statusline #F9FAF9
+        # separator  #454947
 
-#                      border  backgr. text
-        focused_workspace  #F9FAF9 #16a085 #292F34
-        active_workspace   #595B5B #353836 #FDF6E3
-        inactive_workspace #595B5B #222D31 #EEE8D5
-        binding_mode       #16a085 #2C2C2C #F9FAF9
-        urgent_workspace   #16a085 #FDF6E3 #E5201D
+        # #                  border  backgr. text
+        # focused_workspace  #F9FAF9 #16a085 #292F34
+        # active_workspace   #595B5B #353836 #FDF6E3
+        # inactive_workspace #595B5B #222D31 #EEE8D5
+        # binding_mode       #16a085 #2C2C2C #F9FAF9
+        # urgent_workspace   #16a085 #FDF6E3 #E5201D
+
+	# Theme Colors NORD
+        separator  #2e3440
+        background #2e3440
+        statusline #eceff4
+
+        #                   border  background text
+        focused_workspace  #2e3440 #252936    #88c0d0
+        active_workspace   #2e3440 #252936    #ebcb8b
+        inactive_workspace #2e3440 #2e3440    #4c566a
+        urgent_workspace   #2e3440 #2e3440    #ee829f
+        binding_mode       #2e3440 #81a1c1    #2e3440
     }
 }
 
 # hide/unhide i3status bar
 bindsym $mod+m bar mode toggle
 
-# Theme colors
+# Theme colors MANJARO
 # class                   border  backgr. text    indic.   child_border
-  client.focused          #556064 #556064 #80FFF9 #FDF6E3
-  client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
-  client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
-  client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
-  client.placeholder      #000000 #0c0c0c #ffffff #000000 
+  # client.focused          #556064 #556064 #80FFF9 #FDF6E3
+  # client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
+  # client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
+  # client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
+  # client.placeholder      #000000 #0c0c0c #ffffff #000000 
 
+# Theme colors NORD
+# class                   border  backgr. text    indic.   child_border
   client.background       #2B2C2B
+  client.focused          #81a1c1 #81a1c1 #ffffff #81a1c1
+  client.unfocused        #2e3440 #2e3440 #d8dee9 #2e3440
+  client.focused_inactive #2e3440 #2e3440 #d8dee9 #2e3440
+  client.placeholder      #2e3440 #2e3440 #d8dee9 #2e3440
+  client.urgent           #900000 #900000 #ffffff #900000
+
+  client.background       #242424
 
 #############################
 ### settings for i3-gaps: ###
