--- a/nitrogen/nitrogen.cfg
+++ b/nitrogen/nitrogen.cfg
@@ -1,6 +1,6 @@
 [geometry]
-posx=3445
-posy=295
+posx=3444
+posy=270
 sizex=522
 sizey=591
 
@@ -9,4 +9,4 @@ view=list
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/usr/share/backgrounds;/home/augron/.config/assets;
+dirs=/usr/share/backgrounds;/home/augron/zygon;/home/augron/Pictures/backgrounds;
