--- a/terminator-config/config
+++ b/terminator-config/config
@@ -11,16 +11,19 @@
 [profiles]
   [[default]]
     background_color = "#3d3846"
-    background_darkness = 0.85
+    background_darkness = 0.9
     background_type = transparent
     font = Monospace 11
     foreground_color = "#ffffff"
+    show_titlebar = False
     scrollbar_position = hidden
     scrollback_infinite = True
     palette = "#3b4252:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#88c0d0:#e5e9f0:#4c566a:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#8fbcbb:#eceff4"
     use_system_font = False
     title_hide_sizetext = True
-    title_transmit_bg_color = "#26a269"
+    title_transmit_bg_color = "#88c0d0"
+    title_receive_bg_color = "#b48ead"
+    title_inactive_bg_color = "#d8dee9"
   [[light]]
     background_color = "#ffffff"
     font = Monospace 12
