Update nitrogen to use Janeway BG

--- a/nitrogen/bg-saved.cfg
+++ b/nitrogen/bg-saved.cfg
@@ -1,9 +1,9 @@
 [xin_0]
-file=/home/augron/.local/share/backgrounds/janeway-nord-bg-1440.png
-mode=5
+file=/usr/share/backgrounds/janeway-nord-bg-1440.png
+mode=2
 bgcolor=#002a36
 
 [xin_1]
-file=/home/augron/.local/share/backgrounds/janeway-nord-bg-1440.png
-mode=5
+file=/usr/share/backgrounds/janeway-nord-bg-1440.png
+mode=2
 bgcolor=#002a36
