--- a/nitrogen/nitrogen.cfg
+++ b/nitrogen/nitrogen.cfg
@@ -1,6 +1,6 @@
 [geometry]
-posx=3442
-posy=220
+posx=1287
+posy=185
 sizex=522
 sizey=591
 
@@ -9,4 +9,4 @@ view=list
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/usr/share/backgrounds;~/.local/share/backgrounds;
+dirs=/usr/share/backgrounds
