--- a/i3-config/i3blocks.conf
+++ b/i3-config/i3blocks.conf
@@ -46,6 +46,16 @@ markup=pango
 #command=~/.config/i3/scripts/openweather-city
 #interval=1800
 #color=#7275b3
+#
+[spotify]
+label= 
+command=~/.config/i3/scripts/spotify-status.py
+color=#8fbcbb
+interval=5
+
+[separator]
+full_text=: :
+color=#717171
 
 [terminal]
 full_text= 
@@ -112,15 +122,18 @@ interval=30
 command=~/.config/i3/scripts/bandwidth2
 interval=persist
 
-[net]
-command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
-interval=30
+# [net]
+# command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
+# interval=30
+
+[separator]
+full_text=: :
+color=#717171
 
 # Battery indicator
 [battery]
 command=~/.config/i3/scripts/battery2
 # for alternative battery script  change to battery1
-# change this to battery-pinebook-pro if you are running on pinebook-pro
 label=
 interval=30
 
@@ -146,13 +159,17 @@ interval=1
 #command=~/.config/i3/scripts/keyboard-layout
 #interval=2
 
-[keybindings]
-full_text=
-command=~/.config/i3/scripts/keyhint
+# [keybindings]
+# full_text=
+# command=~/.config/i3/scripts/keyhint
 
 # power-profiles-daemon implementation:
 # needs package power-profiles-daemon installed and the service running see here:
 # https://wiki.archlinux.org/title/CPU_frequency_scaling#power-profiles-daemon
+
+[separator]
+full_text=: :
+color=#717171
 
 #set power-profile
 [ppd_menu]
