--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,11 +1,19 @@
 [Settings]
-gtk-icon-theme-name=Papirus-Adapta-Nokto-Maia
+gtk-icon-theme-name=Nordzy-cyan-dark--light_panel
 ; gtk-theme-name=Adapta-Nokto-Eta-Maia
-gtk-theme-name=Nordic-bluish-accent
-gtk-cursor-theme-name=xcursor-breeze
+gtk-theme-name=NordArc-Theme
+; gtk-cursor-theme-name=xcursor-breeze
+gtk-cursor-theme-name=Nordzy-cursors
 gtk-font-name=Noto Sans 10
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
+gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
-gtk-application-prefer-dark-theme=true
+gtk-application-prefer-dark-theme=false
+gtk-cursor-theme-size=0
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-button-images=0
+gtk-menu-images=0
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
