--- a/i3-config/config
+++ b/i3-config/config
@@ -61,8 +61,6 @@ exec --no-startup-id flameshot
 bindsym $mod+Ctrl+m exec pavucontrol
 exec --no-startup-id volumeicon
 
-#bindsym XF86AudioPlay exec playerctl play-pause
-#bindsym XF86AudioNext exec playerctl next
 #bindsym XF86AudioPrev exec playerctl previous
 
 
@@ -84,6 +82,11 @@ bindsym $mod+XF86AudioLowerVolume exec amixer -D pulse sset Master 1%- && pkill 
 # mic mute toggle with amixer
 bindsym XF86AudioMicMute exec amixer sset Capture toggle
 
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym $mod+XF86AudioPlay exec playerctl next
+
+bindsym XF86AudioNext exec playerctl next
+bindsym $mod+XF86AudioNext exec playerctl previous
 # Screen brightness controls
  # bindsym XF86MonBrightnessUp exec "xbacklight -inc 3; notify-send 'brightness up'"
  # bindsym XF86MonBrightnessDown exec "xbacklight -dec 3; notify-send 'brightness down'"
