--- a/.my-bashrc
+++ b/.my-bashrc
@@ -7,5 +7,8 @@ PS1="$PS1$GIT_PS1"
 HISTSIZE=-1
 HISTFILESIZE=-1
 PATH=$PATH:~/.local/bin
+PATH=$PATH:~/git/devtools/bin
 TERMINAL=`which terminator`
 EDITOR=vim
+alias tsm="transmission-remote"
+. secrets
