--- a/i3-config/config
+++ b/i3-config/config
@@ -23,6 +23,8 @@ bindsym $mod+u border none
 bindsym $mod+y border pixel 1
 bindsym $mod+n border normal
 
+# exec xcompmgr for transparency
+exec xcompmgr
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font xft:URWGothic-Book 11
