--- a/terminator-config/config
+++ b/terminator-config/config
@@ -11,8 +11,8 @@
   layout_launcher = <Shift><Alt>l
 [profiles]
   [[default]]
-    background_color = "#3d3846"
-    background_darkness = 0.95
+    background_color = "#3b4252"
+    background_darkness = 0.90
     background_type = transparent
     font = Monospace 11
     foreground_color = "#ffffff"
