i3blocks: Adds support for youtube-music

--- a/i3-config/i3blocks.conf
+++ b/i3-config/i3blocks.conf
@@ -53,33 +53,16 @@ command=~/.config/i3/scripts/spotify-status.py
 color=#8fbcbb
 interval=5
 
+[youtube_music]
+label=🎧 
+command=~/.config/i3/scripts/youtube-music-status.py
+color=#8fbcbb
+interval=5
+
 [separator]
 full_text=: :
 color=#717171
 
-[terminal]
-full_text= 
-color=#5e81ac
-command=i3-sensible-terminal
-
-[browser]
-full_text= 
-color=#d08770
-command=i3-msg -q exec firefox
-
-[files]
-full_text= 
-color=#88c0d0
-command=i3-msg -q exec thunar ~/
-
-#[mail]
-#full_text= 
-#color=#dbcb75
-#command=i3-msg -q exec thunderbird
-
-[simple-2]
-full_text=: :
-color=#717171
 
 # Disk usage
 #
@@ -87,7 +70,7 @@ color=#717171
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=
+label= 
 instance=/
 command=~/.config/i3/scripts/disk
 interval=30
@@ -96,15 +79,15 @@ interval=30
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label=
+label= 
 command=~/.config/i3/scripts/memory
-interval=2
+interval=5
 
 [cpu_usage]
-label=
+label= 
 command=~/.config/i3/scripts/cpu_usage
 #min_width=CPU: 100.00%
-interval=2
+interval=5
 
 [CPU-temperature]
 label=
