--- a/i3-config/i3blocks.conf
+++ b/i3-config/i3blocks.conf
@@ -62,6 +62,14 @@ interval=5
 [separator]
 full_text=: :
 color=#717171
+#
+# PRIME mode
+#
+# For systems with hybrid NVIDIA graphics, prints out the active mode
+[PRIME]
+label=📺 
+command=~/.config/i3/scripts/envycontrol-q
+interval=600
 
 
 # Disk usage
@@ -101,9 +109,9 @@ interval=30
 
 # showing name of connected network (enable for wifi use)
 
-[bandwidth]
-command=~/.config/i3/scripts/bandwidth2
-interval=persist
+# [bandwidth]
+# command=~/.config/i3/scripts/bandwidth2
+# interval=persist
 
 # [net]
 # command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
@@ -158,16 +166,20 @@ color=#717171
 [ppd_menu]
 full_text=
 command=~/.config/i3/scripts/power-profiles
-color=#407437
+color=#a3be8c
 
 #Show the current power-profile
 [ppd-status]
 command=~/.config/i3/scripts/ppd-status
 interval=5
 
+[separator]
+full_text=: :
+color=#717171
+
 [time]
 #label=
-command=date '+%a %d %b %H:%M'
+command=date '+%a %d %b %H:%M W%V'
 interval=60
 
 [shutdown_menu]
