nitrogen: Adds more nitrogen configs

--- a/nitrogen/bg-saved.cfg
+++ b/nitrogen/bg-saved.cfg
@@ -1,9 +1,1 @@
-[xin_0]
-file=/usr/share/backgrounds/janeway-nord-bg-1440.png
-mode=2
-bgcolor=#002a36
-
-[xin_1]
-file=/usr/share/backgrounds/janeway-nord-bg-1440.png
-mode=2
-bgcolor=#002a36
+bg-saved.nvidia-xps-15-2k-right-144.cfg
